--- a/src/assets/scss/partials/_variables.scss
+++ b/src/assets/scss/partials/_variables.scss
@@ -2,4 +2,9 @@ $violet: #554e9e;
 $white:#fefffe;
 $black: #262626;
 $orange: #fe6601;
-$cameo:
+$cameo: #d7ac95;
+$red: #d71938;
+$sushi:#84b443;
+$lime:#36ad02;
+$yellow:#fcd902;
+$blue:#1bafe4;
